add validation rules

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 
                 <div class="column p-2">
-                    <button type="button" class="btn btn-danger" onclick="desistir()">Desistir</button>
+                    <button type="button" class="btn btn-danger" onclick="desistir()">Finalizar</button>
                 </div>
 
             </div>
